Bug 409737 - Fails to build with Qt 5.9
Summary: Fails to build with Qt 5.9
Status: RESOLVED FIXED
Alias: None
Product: kdesvn
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KDESvn default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-12 08:02 UTC by Wolfgang Bauer
Modified: 2019-07-12 14:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2019-07-12 08:02:15 UTC
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp: In function 'int findBreak(int&, QString, QFontMetrics*, int)':
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:371:21: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
     usedWidth = fm->horizontalAdvance(text);
                     ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:381:29: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
         int halfWidth = fm->horizontalAdvance(text, halfPos);
                             ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:412:25: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
         usedWidth = fm->horizontalAdvance(text, breakPos);
                         ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp: In function 'int findBreakBackwards(int&, QString, QFontMetrics*, int)':
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:433:21: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
     usedWidth = fm->horizontalAdvance(text);
                     ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:443:29: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
         int halfWidth = fm->horizontalAdvance(text.mid(halfPos));
                             ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:474:25: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
         usedWidth = fm->horizontalAdvance(text.mid(breakPos));
                         ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp: In member function 'bool RectDrawing::drawField(QPainter*, int, DrawParams*)':
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:640:21: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
         dotW = _fm->horizontalAdvance(QLatin1String("..."));
                     ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:670:25: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
     int w = pixW + _fm->horizontalAdvance(name);
                         ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:748:22: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
             w = _fm->horizontalAdvance(name) + pixW;
                      ^~~~~~~~~~~~~~~~~
/home/abuild/rpmbuild/BUILD/kdesvn-2.1.0/src/svnfrontend/graphtree/drawparams.cpp:779:25: error: 'class QFontMetrics' has no member named 'horizontalAdvance'
         w = pixW + _fm->horizontalAdvance(name);
                         ^~~~~~~~~~~~~~~~~



QFontMetrics::horizontalAdvance() only exists since Qt 5.11...
Comment 1 Wolfgang Bauer 2019-07-12 09:46:38 UTC
https://phabricator.kde.org/D22412
Comment 2 Wolfgang Bauer 2019-07-12 14:14:13 UTC
Git commit 9acb42845378a2278c5edd9e900a3d622e320ea1 by Wolfgang Bauer.
Committed on 12/07/2019 at 14:10.
Pushed by wbauer into branch '2.1'.

Fix build with Qt 5.9

QFontMetrics::horizontalAdvance() only exists since Qt 5.11.
So switch back to QFontMetrics::width() when building with lower
versions.
Differential Revision: https://phabricator.kde.org/D22412

M  +40   -0    src/svnfrontend/graphtree/drawparams.cpp

https://commits.kde.org/kdesvn/9acb42845378a2278c5edd9e900a3d622e320ea1