Fix build with Qt 5.9

QFontMetrics::horizontalAdvance() only exists since Qt 5.11.
So switch back to QFontMetrics::width() when building with lower
versions.

BUG: 409737
Differential Revision: https://phabricator.kde.org/D22412